# Touhou6-Mac

./: CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
crates/engine/: Cargo.toml
crates/engine/src/: audio.rs  lib.rs
crates/formats/examples/: anmdump.rs  ecldump.rs
crates/formats/src/: anm0.rs  ecl.rs  lib.rs
crates/game/examples/: anm_dur.rs  anm_sz.rs  bg_dump.rs  bg_vtx_dump.rs  dump_front.rs  enemy_anm_sizes.rs  extract_ecl.rs  oracle_dump.rs
crates/game/src/: anm_vm.rs  background.rs  ecl_vm.rs  hud.rs  lib.rs  main.rs  stage.rs  title.rs  web.rs
oracle/: .gitignore  README.md  bullet_oracle.cpp  run.sh
oracle/bg/: ScreenEffect.hpp  build.sh  compare.sh  d3dconsts.hpp  oracle_bg_main.cpp  trim.awk
oracle/refcap/: README.md  build.sh  convert.sh  d3d8proxy.c  d3d8proxy.def  run.sh  th06cap.example.txt
oracle/vm/: build.sh  compare.sh  oracle_main.cpp
oracle/vm/engine_stub/: AnmManager.hpp  AsciiManager.hpp  Chain.hpp  Effect.hpp  EffectManager.hpp  FileSystem.hpp  GameErrorContext.hpp  GameManager.hpp  Gui.hpp  ItemManager.hpp  Player.hpp  SoundPlayer.hpp  Stage.hpp  Supervisor.hpp  ZunMath.hpp  i18n.hpp
oracle/vm/stub/: Windows.h  d3d8.h  d3dx8math.h
oracle/vtx/: README.md  build.sh  compare.sh  d3d8.h  d3dx8math.h  oracle_vtx_main.cpp  texstubs.cpp  trim.awk
web/: README.md  index.html
